example/errors/lexer/raw_str_unterminated.box
set x: str = r#####"haiz"###"haiz2"####"haiz3"###"haiz4"####"haiz5"#;

println("this won't work");
